fatoora-derive/tests/fail/wrong_type.stderr
error: Validation rules can only be applied to String fields: age
 --> tests/fail/wrong_type.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
